--- a/loja/loja/.classpath
+++ b/loja/loja/.classpath
@@ -29,5 +29,6 @@
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jersey-common-2.5.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jersey-container-servlet-core-2.5.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jersey-server-2.5.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jjwt-0.7.0.jar"/>
 	<classpathentry kind="output" path="src/main/webapp/WEB-INF/classes"/>
 </classpath>
